--- a/src/styles/_Global.scss
+++ b/src/styles/_Global.scss
@@ -1,5 +1,21 @@
-// Suppression des puces des listes
-ul > li {list-style: none;}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import './Style';
 
-// Suppression des textes liens soulignés
+* {box-sizing: border-box;
+   font-family: 'Montserrat', sans-serif;
+   font-weight: 500;
+   margin : 0;
+   padding: 0;
+  }
+
+// Config page  
+body {color: $text_white;   
+      width: 100%;
+    } 
+     
+.banner__image, .carousel__container-slide, .logements-cover {filter: brightness(0.70);
+                                                              object-fit: cover;
+                                                              width: 100%;
+                                                            }
+ul > li {list-style: none;}
 a {text-decoration: none;}
