--- a/src/components/Banner/_Banner.scss
+++ b/src/components/Banner/_Banner.scss
@@ -2,33 +2,47 @@
 @import '../../styles/_Breakpoints';
 @import '../../styles/_Global';
 
-.banner {margin: 50px auto;
-         position: relative;
-         width: 1240px;
-         height: 223px;
-         @include mobile {margin: 30px auto;
-                          width: 90%;
-                         }
-         &__image {border-radius: 30px;
-                   width: 100%;
-                   height: 223px;  
-                   @include mobile {height: 111px;}
-                  }
-         &__content {font-size: 48px;
-                    color: white;
-                    text-align: center;
-                    position: absolute;
-                    top: 36%;
-                    width: 100%;
-                    @include tablet {font-size: 36px;
-                                    top: 40%; 
-                                    }
-                    @include mobile {font-size: 24px; 
-                                    line-height: 24px;
-                                    text-align: left;
-                                    left: 6%;
-                                    top: 26%;
-                                    width: 67%;  
-                                    }                
-                    }
-        }
+.banner {
+  position: relative;
+  width: 1240px;
+  height: 223px;
+  margin: 50px auto;
+
+  @include mobile {
+    width: 90%;
+    margin: 30px auto;
+  }
+
+  &__image {
+    width: 100%;
+    height: 223px;
+    border-radius: 30px;
+
+    @include mobile {
+      height: 111px;
+    }
+  }
+
+  &__content {
+    position: absolute;
+    top: 36%;
+    width: 100%;
+    font-size: 48px;
+    color: white;
+    text-align: center;
+
+    @include tablet {
+      font-size: 36px;
+      top: 40%;
+    }
+
+    @include mobile {
+      font-size: 24px;
+      line-height: 24px;
+      text-align: left;
+      top: 26%;
+      left: 6%;
+      width: 67%;
+    }
+  }
+}
