--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -1,35 +1,47 @@
 @import '../../styles/_Style.scss';
-@import '../../styles/_Breakpoints.scss'; 
+@import '../../styles/_Breakpoints.scss';
 
-.header {display: flex;
-         justify-content: space-between;
-         margin: 30px auto;
-         width: 80%;
-         @include mobile {width: 90%;}
-         &__image {align-items: center;
-                   height: 68px;
-                   width: 210px;
-                   @include mobile {height: 46px;
-                                    width: 145px;
-                                   }
-                  }
-         &__navbar {align-items: center;
-                    display: flex;
-                    
-                    gap: 50px;
-                    @include mobile {align-items: right;
-                                     gap: 20px;
-                                    }
-                    a {font-size: 24px;
-                       color: black;
-                       font-weight: 500;
-                       @include mobile {font-size: 12px;
-                                        line-height: 17px;
-                                        text-transform: uppercase;
-                                        
-                                       }
-                       
-                      }
-                   }
-        }
-                       
+.header {
+   display: flex;
+   justify-content: space-between;
+   margin: 30px auto;
+   width: 80%;
+
+   @include mobile {
+      width: 90%;
+   }
+
+   &__image {
+      align-items: center;
+      height: 68px;
+      width: 210px;
+
+      @include mobile {
+         height: 46px;
+         width: 145px;
+      }
+   }
+
+   &__navbar {
+      display: flex;
+      align-items: center;
+      gap: 50px;
+
+      @include mobile {
+         gap: 20px;
+         
+      }
+
+      a {
+         font-size: 24px;
+         color: black;
+         font-weight: 500;
+
+         @include mobile {
+         font-size: 12px;
+         line-height: 17px;
+         text-transform: uppercase;
+         }
+      }
+   }
+}
