--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -7,6 +7,7 @@
     margin: 50px auto;
     padding: 10px 0;
     width: 80%;
+    max-width: 1240px;
 
     @include mobile {
         background-color: white;
@@ -19,7 +20,6 @@
         grid-template-columns: repeat(3, 1fr);
         justify-content: space-around;
         gap: 50px;
-        padding: 50px;
         width: 100%;
 
         @include mobile {
