--- a/src/components/Banner/_Banner.scss
+++ b/src/components/Banner/_Banner.scss
@@ -11,15 +11,16 @@
     @include mobile {
         width: 90%;
         margin: 30px auto;
+        height: 100px;
     }
 
     &__image {
-        width: 100%;
         height: 223px;
         border-radius: 30px;
 
         @include mobile {
             height: 111px;
+            width: 335px;
         }
     }
 
