--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 65%;
     margin: 40px auto;
 
     @include mobile {
@@ -25,6 +24,7 @@
         @include mobile {
             padding: 4px 6px;
             border-radius: 5px;
+            width: 335px;
         }
 
         h2 {
@@ -67,6 +67,7 @@
         @include mobile {
         font-size: 12px;
         line-height: 17px;
+        width: 335px;
         }
 
         &.open {
