--- a/src/components/Banner/_Banner.scss
+++ b/src/components/Banner/_Banner.scss
@@ -16,12 +16,22 @@
 
     &__image {
         height: 223px;
-        border-radius: 30px;
+        border-radius: 25px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 
         @include mobile {
             height: 111px;
             width: 335px;
         }
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.4); 
+        z-index: 1;
+        border-radius: 25px;
     }
 
     &__content {
@@ -31,6 +41,7 @@
         font-size: 48px;
         color: white;
         text-align: center;
+        z-index: 2;
 
         @include tablet {
             font-size: 36px;
