--- a/src/components/Carousel/_Carousel.scss
+++ b/src/components/Carousel/_Carousel.scss
@@ -56,8 +56,13 @@
         }
 
         &-slide {
-            border-radius: 20px;
+            border-radius: 10px;
             height: 100%;
+
+            @include mobile {
+                max-width: 100%;
+                height: 255px;
+            }
         }
 
         &-slidehidden {
