--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -5,11 +5,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 40px auto;
+    margin: 40px -200px;
+    
 
     @include mobile {
-        width: 100%;
-        margin: 15px auto;
+        max-width: 476px;
+        margin: 15px auto;    
+        margin-right: 50px;
     }
 
     &__header {
@@ -24,7 +26,8 @@
         @include mobile {
             padding: 4px 6px;
             border-radius: 5px;
-            width: 335px;
+            max-width: 80%;
+            
         }
 
         h2 {
@@ -61,7 +64,7 @@
         margin-top: -40px;
         max-height: 0;
         overflow: hidden;
-        transition: max-height 0.6s ease-in-out, margin-top 0.5s ease-in-out;
+        transition: max-height 0.2s ease-in-out, margin-top 0.2s ease-in-out;
         z-index: -1;
 
         @include mobile {
@@ -73,14 +76,14 @@
         &.open {
         margin-top: -6px;
         max-height: 400px;
-        transition: max-height 0.5s ease-in-out, margin-top 0.5s ease-in-out;
+        transition: max-height 0.2s ease-in-out, margin-top 0.2s ease-in-out;
         }
     }
 }
 
 // Animation chevron
 .collapse .chevron-up {
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .collapse.open .chevron-up {
