--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -8,9 +8,12 @@
    width: 1240px;
 
    @include mobile {
-      width: 90%;
+      max-width: 90%; 
    }
 
+   @include tablet {
+      max-width: 80%;
+   }
    &__image {
       align-items: center;
       height: 68px;
@@ -28,7 +31,7 @@
       gap: 50px;
 
       @include mobile {
-         gap: 20px;
+         gap: 26px;
       }
 
       a {
