--- a/src/components/Footer/_Footer.scss
+++ b/src/components/Footer/_Footer.scss
@@ -8,6 +8,7 @@
     justify-content: center;
 
     width: 100%;
+    max-width: 1440px;
     padding: 50px;
     gap: 25px;
     background-color: $footer-color;
