--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -2,20 +2,19 @@
 @import '../../styles/_Breakpoints.scss';
 
 .logements {
-    background-color: $second-color;
-    border-radius: 25px;
     margin: 50px auto;
     padding: 10px 0;
     width: 80%;
     max-width: 1240px;
 
     @include mobile {
-        background-color: $second-color;
+        background-color: $color-white;
         margin: 20px auto;
         width: 80%;
     }
 
     &__list {
+        border-radius: 25px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         justify-content: space-around;
@@ -27,6 +26,7 @@
         @include mobile {
             grid-template-columns: repeat(1, 1fr);
             padding: 0;
+            background-color: $color-white;
         }
 
         @include tablet {
@@ -54,7 +54,7 @@
                 .logements-cover {
                     height: 340px;
                     border-radius: 10px;
-
+       
                     @include tablet {
                         height: 220px;
                     }
@@ -63,6 +63,7 @@
                         height: 255px;
                         width: 335px;
                     }
+                    
                 }
 
                 .logements-title {
@@ -85,4 +86,31 @@
             }
         }
     }
+    
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0)
+      rgba(10, 10, 10, 0) 0%,
+      rgba(4, 4, 4, 0.41) 41%
+      rgba(0, 0, 0, 1) 1%
+    );
+
+    @include tablet {
+        height: 220px;
+    }
+
+    @include mobile {
+        height: 255px;
+        width: 335px;
+    }                        
+    pointer-events: none;
+  }
 }
+
