--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -4,24 +4,20 @@
 .collapse {
     display: flex;
     flex-direction: column;
-    
     align-items: center;
-    margin: 40px -200px;
-    width: 582px;
+    margin: 40px auto;
+    width: 583px;
     
-    
-
     @include mobile {
-        max-width: 476px;
+        max-width: 100%;
         margin: 15px auto;    
-        margin-right: 50px;
     }
 
     &__header {
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         justify-content: space-between;
-        width: 582px;
+        width: 1023px;
         padding: 10px 20px 10px 10px;
         background-color: $main-color;
         border-radius: 5px;
@@ -30,7 +26,8 @@
         @include mobile {
             padding: 4px 6px;
             border-radius: 5px;
-            max-width: 80%;
+            width: 100%;
+            max-width: 767.99px;
             align-items: center;
             
         }
@@ -60,10 +57,11 @@
     }
 
     &__content {
-        width: 582px;
-        padding: 20px;
+        width: 100%;
+        padding: 20px 20px;
         font-size: 18px;
-        color: $main-color;
+        font-weight: 400;
+        color: black;
         background-color: $second-color;
         border-radius: 0 0 10px 10px;
         margin-top: -40px;
