--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -8,7 +8,8 @@
    width: 1240px;
 
    @include mobile {
-      max-width: 90%; 
+      max-width: 90%;
+      justify-content: space-around; 
    }
 
    @include tablet {
