--- a/src/pages/Logements/_Logements.scss
+++ b/src/pages/Logements/_Logements.scss
@@ -12,6 +12,10 @@
         width: 90%;
     }
 
+    .carousel__container {
+        // Ajoute ici les styles du carousel si besoin
+    }
+
     &__container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -42,6 +46,12 @@
                     font-size: 14px;
                     line-height: 20px;
                 }
+            }
+        }
+
+        .tags {
+            &__container {
+                // À compléter si nécessaire
             }
         }
 
@@ -92,19 +102,27 @@
 
     &__collapse {
         display: flex;
-        box-sizing: content-box;
-        width: 450px;
-        gap: 450px;
-        justify-content: space-between;
-        margin-left: 200px;
-
+        gap: 76px;
+        
         @include mobile {
+            display: flex;
             flex-direction: column;
-            gap: 0;
-            align-items: flex-start;
-            margin: 15px -45px;
+            gap: 20px;
         }
 
-        
+        .collapse {
+            display: flex;
+
+            &__header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+            }
+
+            &__content {
+                width: 100%;
+            }
+        }
     }
 }
