--- a/src/components/Banner/_Banner.scss
+++ b/src/components/Banner/_Banner.scss
@@ -4,44 +4,54 @@
 
 .banner {
     position: relative;
-    width: 1240px;
-    height: 223px;
-    margin: 50px auto;
-
-    @include mobile {
-        max-width: 80%;
-        margin: 30px auto;
-        height: 100px;
-    }
+    max-width: 1240px;
+    margin: 20px 0;
 
     @include tablet {
-                max-width: 80%;
+        max-width: 100%;
     }
 
-    &__image {
-        height: 223px;
-        border-radius: 25px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    @include mobile {
+        height: 100px;
+        padding: 0;
+    }
 
-        @include mobile {
-            height: 111px;
-            width: 100%;
-            border-radius: 10px;
+    &__image-wrapper {
+        position: relative;
+        width: 87%;
+        margin: 30px auto;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.4);
+            z-index: 1;
+            border-radius: 25px;
+            
+
+            @include mobile {
+                border-radius: 10px;
+                width: 100%;
+                
+            }
         }
     }
 
-    &::after {
-        content: '';
-        position: absolute;
-        inset: 0;
-        background-color: rgba(0, 0, 0, 0.4); 
-        z-index: 1;
+    &__image {
+        display: block;
+        width: 100%;
+        height: 223px;
         border-radius: 25px;
+        object-fit: cover;
 
         @include mobile {
             height: 111px;
-            width: 100%;
             border-radius: 10px;
+            width: 100%;
         }
     }
 
