--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -3,8 +3,8 @@
 
 .logements {
     margin: 50px auto;
-    padding: 10px 0;
-    width: 80%;
+   
+    width: 100%;
     max-width: 1240px;
 
     @include mobile {
@@ -22,6 +22,7 @@
         gap: 50px;
         padding: 50px;
         width: 100%;
+        max-width: 1240px;
 
         @include mobile {
             grid-template-columns: repeat(1, 1fr);
@@ -61,7 +62,7 @@
 
                     @include mobile {
                         height: 255px;
-                        width: 335px;
+                        max-width: 335px;
                     }
                     
                 }
