--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -5,11 +5,12 @@
    display: flex;
    justify-content: space-between;
    margin: 30px auto;
-   width: 1240px;
+   max-width: 1240px;
 
    @include mobile {
-      max-width: 90%;
+      max-width: 100%;
       justify-content: space-around; 
+      max-width: 335px;
    }
 
    @include tablet {
@@ -32,25 +33,30 @@
       gap: 50px;
 
       @include mobile {
-         gap: 26px;
+         gap: 15px;
       }
 
       a {
          font-size: 24px;
          color: black;
          font-weight: 500;
-         
-         &:hover, 
-         :active, 
-         :focus {
-            text-decoration: underline;
+         position: relative;
+         text-decoration: none;
+
+         &.active::after {
+            content: '';
+            position: absolute;
+            bottom: 0px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: black;
          }
 
-
          @include mobile {
-         font-size: 12px;
-         line-height: 17px;
-         text-transform: uppercase;
+            font-size: 12px;
+            line-height: 17px;
+            text-transform: uppercase;
          }
       }
    }
