--- a/src/components/Banner/_Banner.scss
+++ b/src/components/Banner/_Banner.scss
@@ -1,25 +1,28 @@
-@import '../../styles/Style';
-@import '../../styles/_Breakpoints';
-@import '../../styles/_Global';
+@use '../../styles/Style' as *;
+@use '../../styles/Breakpoints' as *;
+@use '../../styles/Global' as *;
 
 .banner {
     position: relative;
     max-width: 1240px;
     margin: 20px 0;
+    width: 100%;
+    
 
     @include tablet {
         max-width: 100%;
     }
 
-    @include mobile {
-        height: 100px;
-        padding: 0;
-    }
-
     &__image-wrapper {
         position: relative;
-        width: 87%;
+        max-width: 100%;
         margin: 30px auto;
+        max-width: 1240px;
+
+        @include mobile {
+            max-width: 100%;
+            margin: 0 30px;
+        }
 
         &::after {
             content: '';
@@ -36,6 +39,7 @@
             @include mobile {
                 border-radius: 10px;
                 width: 100%;
+                
                 
             }
         }
