--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -1,16 +1,15 @@
-@import '../../styles/_Style.scss';
-@import '../../styles/_Breakpoints.scss';
+@use '../../styles/Style' as *;
+@use '../../styles/Breakpoints' as *;
 
 .logements {
     margin: 50px auto;
-   
     width: 100%;
     max-width: 1240px;
 
     @include mobile {
         background-color: $color-white;
-        margin: 20px auto;
-        width: 80%;
+        margin: 30px auto;
+        width: 100%;
     }
 
     &__list {
@@ -25,9 +24,11 @@
         max-width: 1240px;
 
         @include mobile {
+            max-width: 100%;
             grid-template-columns: repeat(1, 1fr);
-            padding: 0;
+            padding: 0 30px;
             background-color: $color-white;
+            
         }
 
         @include tablet {
@@ -62,7 +63,7 @@
 
                     @include mobile {
                         height: 255px;
-                        max-width: 335px;
+                        max-width: 100%;
                     }
                     
                 }
@@ -89,6 +90,7 @@
     }
     
   .overlay {
+    pointer-events: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -97,21 +99,22 @@
     border-radius: 10px;
     background: linear-gradient(
       to bottom,
-      rgba(255, 255, 255, 0)
+      rgba(255, 255, 255, 0),
       rgba(10, 10, 10, 0) 0%,
-      rgba(4, 4, 4, 0.41) 41%
-      rgba(0, 0, 0, 1) 1%
+      rgba(4, 4, 4, 0.41) 41%,
+      
     );
 
-    @include tablet {
-        height: 220px;
+        @include tablet {
+            height: 220px;
+        }
+
+        @include mobile {
+            height: 255px;
+            width: 100%;
+        }                        
+        
     }
 
-    @include mobile {
-        height: 255px;
-        width: 335px;
-    }                        
-    pointer-events: none;
-  }
 }
 
