--- a/src/components/Carousel/_Carousel.scss
+++ b/src/components/Carousel/_Carousel.scss
@@ -1,5 +1,5 @@
-@import '../../styles/Style';
-@import '../../styles/Breakpoints';
+@use '../../styles/Style.scss' as *;
+@use '../../styles/Breakpoints' as *;
 
 .carousel {
     margin-bottom: 30px;
