--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -1,16 +1,20 @@
-@import '../../styles/Style';
-@import '../../styles/Breakpoints';
+@use '../../styles/Style.scss' as *;
+@use '../../styles/Breakpoints' as *;
 
 .collapse {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 20px auto;
-    width: 583px;
+    width: 1023px;
     
+
     @include mobile {
         max-width: 100%;
-        margin: 15px auto;    
+        margin: 15px auto; 
+        
+        display: flex;
+        flex-direction: column;
     }
 
     &__header {
@@ -18,6 +22,7 @@
         align-items: center;
         justify-content: space-between;
         width: 1023px;
+        
         padding: 10px 20px 10px 10px;
         background-color: $main-color;
         border-radius: 5px;
@@ -27,7 +32,8 @@
             padding: 4px 6px;
             border-radius: 5px;
             width: 100%;
-            max-width: 335px;
+            
+            height: 40px;
             align-items: center;
             
         }
@@ -74,7 +80,6 @@
         @include mobile {
         font-size: 12px;
         line-height: 17px;
-        max-width: 335px;
         }
 
         &.open {
