--- a/src/components/Rating/_Rating.scss
+++ b/src/components/Rating/_Rating.scss
@@ -1,5 +1,5 @@
-@import '../../styles/Breakpoints.scss';
 
+@use '../../styles/Breakpoints' as *;
 .rating {
     align-items: flex-end;
     display: flex;
