--- a/src/components/Banner/_Banner.scss
+++ b/src/components/Banner/_Banner.scss
@@ -10,7 +10,7 @@
     
 
     @include tablet {
-        max-width: 100%;
+        max-width: 80%;
     }
 
     &__image-wrapper {
@@ -22,6 +22,11 @@
         @include mobile {
             max-width: 100%;
             margin: 0 30px;
+        }
+
+        @include tablet {
+            max-width: 100%;
+
         }
 
         &::after {
@@ -38,9 +43,8 @@
 
             @include mobile {
                 border-radius: 10px;
-                width: 100%;
-                
-                
+                width: 100%; 
+               
             }
         }
     }
@@ -63,23 +67,31 @@
         position: absolute;
         top: 36%;
         width: 100%;
-        font-size: 48px;
+        font-size: 3rem;
+        font-weight: 700;
+        font-weight: bold;
         color: white;
         text-align: center;
         z-index: 2;
 
         @include tablet {
-            font-size: 36px;
+            position: absolute;
+            text-align: center;
+            font-weight: 700;
+            font-weight: bold;
+            font-size: 2.25rem;
             top: 40%;
         }
 
         @include mobile {
-            font-size: 24px;
-            line-height: 24px;
-            text-align: left;
+            width: 225px;
+            height: 48px;
+            font-size: 1.5rem;
+            font-weight: bold;
+            line-height: 100%;
+            text-align: start;
             top: 26%;
             left: 6%;
-            width: 67%;
         }
     }
 }
