--- a/src/components/Cards/_Cards.scss
+++ b/src/components/Cards/_Cards.scss
@@ -28,11 +28,12 @@
             grid-template-columns: repeat(1, 1fr);
             padding: 0 30px;
             background-color: $color-white;
-            
+            gap: 22px;
         }
 
         @include tablet {
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(1, 1fr);
+            gap: 50px;
         }
 
         &-item {
@@ -47,6 +48,7 @@
 
                 @include tablet {
                     height: 220px;
+                    max-width: 100%;
                 }
 
                 @include mobile {
@@ -59,6 +61,7 @@
        
                     @include tablet {
                         height: 220px;
+                        
                     }
 
                     @include mobile {
@@ -76,7 +79,7 @@
                     font-size: 18px;
 
                     @include tablet {
-                        font-size: 14px;
+                        font-size: 24px;
                     }
 
                     @include mobile {
