--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -12,7 +12,6 @@
     @include mobile {
         max-width: 100%;
         margin: 15px auto; 
-        
         display: flex;
         flex-direction: column;
     }
@@ -32,17 +31,21 @@
             padding: 4px 6px;
             border-radius: 5px;
             width: 100%;
-            
             height: 40px;
             align-items: center;
-            
+        }
+
+        @include tablet {
+            width: 100%;
+
         }
 
         h2 {
-            font-size: 24px;
+            font-size: 1.5rem;
+            font-weight: bold;
 
             @include mobile {
-                font-size: 13px;
+                font-size: 0.813rem;
             }
         }
 
