--- a/src/pages/About/_About.scss
+++ b/src/pages/About/_About.scss
@@ -9,5 +9,10 @@
             width: 100%;
             padding: 0 30px;
         }
+
+        @include tablet {
+            width: 100%;
+            margin: 15px auto; 
+        }
     }
 }
